fixed alignment issues

--- a/main.scss
+++ b/main.scss
@@ -26,7 +26,7 @@ header{
        background-color: #717171;
         width: 70vw;
         text-align: center;
-        height: 50vh;
+        height: 70vh;
          display: none;
         a{ 
         color: white;
@@ -119,7 +119,7 @@ header{
           margin-bottom: 1rem;
       }
       p{
-          font-size: 30px;
+        
           margin-top: 0; 
       }
   }
