--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header .nav-mobile {
   background-color: #717171;
   width: 70vw;
   text-align: center;
-  height: 50vh;
+  height: 70vh;
   display: none;
 }
 header .nav-mobile a {
@@ -115,7 +115,6 @@ header .nav-mobile a {
     margin-bottom: 1rem;
   }
   .main-section p {
-    font-size: 30px;
     margin-top: 0;
   }
 }
